css/main.css
html {
  height: 100%;
}

@font-face {
  font-family: 'Abel';
  src: url('../bin/fonts/Abel-Regular.ttf') format('truetype');
}

body {
    background-color: #2bd4f6;
	margin: 0;
	padding: 0;
	background-image: url("../bin/img/small/bg.jpg");
	background-repeat: repeat-y;
	background-size:100%;
}

.header {
	display:flex;
	flex-direction: row;
	justify-content: space-between;
	background-color: #FF00CC;
	font-family: 'Abel', sans-serif;
	font-size:20px;
	height:75px;
	font-style: normal;
	color: #ffffff;
	text-align:center;
	/* padding: 20px; */
	margin:auto;
}

.titleContainer{
	display:flex;
	flex-direction: row;
	justify-content:center;
	align-items: center;
	font-family: 'Abel', sans-serif;
	font-size:20px;
	height:75px;
	width:90%;
	font-style: normal;
	color: #ffffff;
	text-align:center;
	/* background-color: #666; */
	/* padding: 20px; */
}

.line{
	border-left:1px solid #fff;
	height:40px;
	margin-left:20px;
}

.burgerButton{
	position:relative;
	display:flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	align-content: center;
	/* align-self: flex-end; */
	margin-right:0;
	right:0px;
	top:2px;
	/* background-color: #aaa; */
	border-left:1px solid #fff;
	width:60px;
	height:70px;	
}

.burgerIcon{
	/* margin-left:50%; */
	margin-top:5px;
	margin-bottom:5px;
	border-top:1px solid #fff;
	height:0px;
	width:25px;
	position:relative;
}

.homeContainer{
	position:relative;
	display:flex;
	flex-direction: column;
	margin-left:20px;
	text-align:left;
	width:240px;
	/* background-color: #666; */
}

.homeContact{
	font-family: 'Abel', sans-serif;
	color: #fff;	
	font-size:15px;
	font-style: normal;	
}


.mainContent{
	position:relative;
	margin-top:3%;
	/* margin-bottom:50px; */
	width:100%;
	/* height:100%; */
	/* padding-top: 10px;
	padding-bottom: 10px; */
	background-image: url("../bin/img/bg_alpha.png");
	background-repeat: repeat-xy;
	background-size:100% 100%;
}

.portoFolioContent{
	position:fixed;
	display:flex;
	flex-direction: row;
	justify-content: center;
	align-items: top;	
	margin-top:50px;
	margin-bottom:50px;
	width:90%;
	/* background-color: #555; */
}

.navigationMenuContainer{
	position: fixed;
	top:0;
	right:0;
	width:100%;
	height:100%;
	z-index:10;
	/* background-color: #fff; */
}

.navigationMenuBackground{
	position: fixed;
	background-color: #440022;
	top:0;
	right:0;
	opacity:0.7;
	width:100%;
	height:100%;
}

.navigationMenu{
	position: fixed;
	background-color: #FF00CC;
	top:20px;
	right:20px;
	background-image: url("../bin/img/iconClose.png");
	background-repeat: no-repeat;
	background-position: top 10px right 10px;
	padding-top: 45px;
	padding-bottom: 15px;
}

.navigationMenuButton{
	position:relative;
	font-family: 'Abel', sans-serif;
	color: #fff;	
	font-size:25px;
	font-style: normal;
	text-transform: uppercase;
	padding:5px 30px 5px 30px;
	/* background-color: #CC0055; */
}


.CVtitle{
	font-family: 'Abel', sans-serif;
	color: #111;	
	font-size:18px;
	font-style: normal;
	text-transform: uppercase;
	/* background-color: #ccc; */
}

.icon{
	background-repeat: no-repeat;
	margin-left:15px;
	margin-right:15px;
	width:32px;
	height:32px;
}

.icon1{
	background-image: url("../bin/img/icon1.png");
}

.icon1on{
	background-image: url("../bin/img/icon1on.png");
}


.icon2{
	background-image: url("../bin/img/icon2.png");
}

.icon2on{
	background-image: url("../bin/img/icon2on.png");
}

.icon3{
	background-image: url("../bin/img/icon3.png");
}
.icon3on{
	background-image: url("../bin/img/icon3on.png");
}

/* 
.iconOff{
	opacity: 0.5;
} */


.CVspace{
	margin-bottom: 20px;
}

.CVsub{
	text-transform: uppercase;
}

.CVresume{
	font-family: 'Abel', sans-serif;
	color: #111;	
	font-size:15px;
	font-style: normal;
	/* background-color: #ccc; */
	height: 150px;
}


.PortofolioButton{
	/* display:block; */
	position: relative;
	bottom:0px;
	font-family: 'Abel', sans-serif;
	color: #fff;	
	font-size:20px;
	font-style: normal;
	width:300px;
	text-align:center;
	text-transform:uppercase;
	background-color:#FF00CC;
	/* left:20px; */
	padding:15px;
	margin-top:20px;
	/* margin-bottom:0; */

	/* margin-left:20px; */
}





/* For devices 600px and smaller: */
@media only screen and (max-width: 800px) {
	body { 
		background-image: url('../bin/img/small/bg.jpg'); 		
	}

	.homeContent{
		position:relative;
		display:flex;
		white-space: nowrap;
		flex-direction: column;
		justify-content: center;
		align-items: center;
		align-content: center;
		/* padding-top: 15px; */
		padding-bottom: 15px;
		width:100%;
		/* background-color: #aaa; */
	}	


	.iconContainer{
		display: flex;
		flex-direction: row;
		justify-content: center;
		align-items: center;
		align-content: center;
		margin-top:20px;
		margin-bottom: 20px;
		/* background-color: #777; */
		height:32px;
		width:100%;
	}
	

	.title{
		display:none;
		position:relative;
		text-align: right;
		/* white-space: nowrap; */
		width:120px;
		height:40px;
		line-height:40px;
	}

	.line{
		display:none;
		border-left:1px solid #fff;
		height:40px;
		margin-left:20px;
	}	

	.CVcontent{
		position:relative;
		/* margin:auto; */
		/* width:400px; */
		/* margin-left:20px; */
		/* padding-left:20px; */
		/* background-color: #aaa; */
		/* background-color: #aaa; */
		text-align: center;
		margin: auto;
	}

	.CVportraitContainer{
		width:200px;
		height:175px;
	}
	
	.CVportrait{
		margin-right:0;
		margin-left:auto;
		width:200px;
		height:175px;
		background-image: url("../bin/img/portrait_spritesheet.png");
		background-repeat: no-repeat;
		background-position: 0px 30px;
		background-size: 1600px 140px;
		animation: portraitAnimationSmall 0.6s steps(8) infinite;
	}
	
	@keyframes portraitAnimationSmall{
		from {background-position-x:0px}
		to {background-position-x:-1600px}
	}
	
}

/* For devices 600px and bigger: */
@media only screen and (min-width: 800px) {
	body { 
		background-image: url('../bin/img/middle/bg.jpg');		
	}

	.homeContent{
		top:0px;
		position:relative;
		display:flex;
		white-space: nowrap;
		flex-direction: row;
		justify-content: center;
		align-items: top;
		padding-top: 15px;
		padding-bottom: 15px;
		/* margin-top:10%;
		margin-bottom:50px; */
		width:90%;
		/* background-color: #555; */
	}		

	.title{
		position:relative;
		text-align: right;
		white-space: nowrap;
		width:240px;
		height:40px;
		line-height:40px;
	}  

	.CVportraitContainer{
		width:400px;
		height:350px;
	}	

	.CVportrait{
		margin-right:0;
		margin-left:auto;
		width:400px;
		height:350px;
		background-image: url("../bin/img/portrait_spritesheet.png");
		background-repeat: no-repeat;
		background-position: 0px 30px;
		background-size: 3200px 280px;
		animation: portraitAnimation 0.6s steps(8) infinite;
	}
	
	@keyframes portraitAnimation{
		from {background-position-x:0px}
		to {background-position-x:-3200px}
	}

	.CVcontent{
		position:relative;
		/* margin:auto; */
		width:400px;
		margin-left:20px;
		/* padding-left:20px; */
	}


	.iconContainer{
		display: flex;
		flex-direction: row;
		justify-content: center;
		align-items: center;
		align-content: center;
		margin-top:20px;
		margin-bottom: 20px;
		/* background-color: #777; */
		height:32px;
		width:300px;
	}
	
}

/* For devices 1440px and bigger: */

@media only screen and (min-width: 1440px) {
	body { 
		background-image: url('../bin/img/big/bg.jpg'); 
	}

}

